add assignHelpRequestToWorker method